--- a/lhind-agilportal/package.json
+++ b/lhind-agilportal/package.json
@@ -26,10 +26,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-<<<<<<< HEAD
-=======
-    "hammerjs": "^2.0.8",
->>>>>>> parent of 3a3e50d... Merge branch 'dev' of https://github.com/Cryptoshot/lhind.agileportal into dev
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
